<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AAUA_Sign_Up">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:src="@drawable/aaua">

                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="22sp">

                </TextView>
            </LinearLayout>
            <ImageView
                android:layout_below="@+id/layout"
                android:rotation="45"
                android:layout_centerHorizontal="true"
                android:id="@+id/square_layout"
                android:layout_marginTop="-10dp"
                android:src="@drawable/square_register"
                android:layout_width="20dp"
                android:layout_height="20dp">
            </ImageView>
            <RelativeLayout
                android:id="@+id/Edit_layout1"
                android:layout_below="@+id/square_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_Icon"
                    android:padding="8dp"
                    android:background="@color/colorPrimary"
                    android:tint="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/aaua"
                    >
                </ImageView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Matric Number"
                    android:paddingLeft="15dp"
                    android:layout_alignBottom="@+id/user_Icon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/user_Icon"
                    android:background="@color/EditTextBG">

                </EditText>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/Edit_layout2"
                android:layout_below="@+id/Edit_layout1"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_Icon"
                    android:padding="8dp"
                    android:background="@color/colorPrimary"
                    android:tint="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/aaua"
                    >
                </ImageView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Matric Number"
                    android:paddingLeft="15dp"
                    android:layout_alignBottom="@+id/user_Icon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/user_Icon"
                    android:background="@color/EditTextBG">

                </EditText>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/Edit_layout3"
                android:layout_below="@+id/Edit_layout2"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_Icon_Password"
                    android:padding="8dp"
                    android:background="@color/colorPrimary"
                    android:tint="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/aaua"
                    >
                </ImageView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:paddingLeft="15dp"
                    android:layout_alignBottom="@+id/user_Icon_Password"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/user_Icon_Password"
                    android:background="@color/EditTextBG">

                </EditText>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/Edit_layout4"
                android:layout_below="@+id/Edit_layout3"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_Icon_R_password"
                    android:padding="8dp"
                    android:background="@color/colorPrimary"
                    android:tint="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/aaua"
                    >
                </ImageView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Re-type Password"
                    android:paddingLeft="15dp"
                    android:textSize="15dp"
                    android:layout_alignBottom="@+id/user_Icon_R_password"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/user_Icon_R_password"
                    android:background="@color/EditTextBG">
                </EditText>
            </RelativeLayout>
            <CheckBox
                android:id="@+id/chkBox1"
                android:layout_below="@id/Edit_layout4"
                android:layout_width="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/terms"
                android:textColor="@color/textColor"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">
            </CheckBox>
            <Button
                android:id="@+id/sign_up_btn"
                android:enabled="true"
                android:elevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/chkBox1"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/white"
                android:text="@string/sign">

            </Button>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_alignRight="@+id/cv"
        android:layout_alignTop="@+id/cv"
        android:layout_marginTop="-10dp"
        android:layout_marginRight="-10dp"

        >
        <ImageButton
            android:id="@+id/login_circle_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_login_btn"
            android:src="@drawable/ic_login_arrow"
            >
        </ImageButton>

    </RelativeLayout>

</RelativeLayout>